adequação a nova pasta

--- a/APP/templates/Portifolio.html
+++ b/APP/templates/Portifolio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CG TECH - Portfólio</title>
-    <link rel="stylesheet" type="text/css" href="css/portifolio.css">
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/portifolio.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/estilo.css">
 </head>
 <body>
     <header>
