--- a/APP/templates/fale-conosco.html
+++ b/APP/templates/fale-conosco.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CG TECH - Fale Conosco</title>
-    <link rel="stylesheet" type="text/css" href="css/fale-conosco.css"> <!-- Link para o novo CSS -->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Link para o novo CSS -->
+    <link rel="stylesheet" type="text/css" href="../static/css/fale-conosco.css"> <!-- Link para o novo CSS -->
+    <link rel="stylesheet" type="text/css" href="../static/css/estilo.css"> <!-- Link para o novo CSS -->
 </head>
 <body>
     <header>
@@ -57,7 +57,7 @@
     <footer>
         <p>&copy; 2025 CGTECH Consultoria. Todos os direitos reservados.</p>
     </footer>
-    <script src="js/fale-conosco.js"></script>
+    <script src="../static/JS/fale-conosco.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>    
 </body>
 </html>
