--- a/APP/templates/Services.html
+++ b/APP/templates/Services.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CG TECH - Services</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="css/servicos.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/servicos.css">
 </head>
 <body>
     <header>
