--- a/APP/templates/Sobre.html
+++ b/APP/templates/Sobre.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CG TECH - Sobre</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="css/sobre.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/sobre.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
     <section id="sobre">
         <h2>Quem Somos</h2>
         <div class="sobre-container">
-          <img src="img/equipe.jpeg" alt="Equipe CG Tech">
+          <img src="../static/img/equipe.jpeg" alt="Equipe CG Tech">
           <div class="texto">
             <p>A <strong>CG Tech Consultoria</strong> é especializada em soluções de tecnologia para o setor hospitalar e pequenas empresas. Nossa missão é entregar resultados reais com agilidade e inovação.</p>
             <ul>
