--- a/APP/templates/index.html
+++ b/APP/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGTECH</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/estilo.css">
 </head>
 <body>
     <!-- Cabeçalho com o menu de navegação -->
