--- a/APP/templates/Sobre.html
+++ b/APP/templates/Sobre.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Fale Conosco - CGTech{% endblock %}
+{% block title %}Sobre - CGTech{% endblock %}
 {% block extra_css %}
 <!-- <link rel="stylesheet" href="../static/css/estilo.css"> -->
 <link rel="stylesheet" href="../static/css/sobre.css"> {% endblock %}
