Criação da pag noticia e mapeamento de rota

--- a/APP/static/css/index.css
+++ b/APP/static/css/index.css
@@ -39,7 +39,7 @@ header {
 }
 
 #area-menu a:hover {
-    background-color: #f7b600; /* Cor de hover laranja */
+    background-color: white; /* Cor de hover laranja */
     color: #003366;
 }
 
