--- a/APP/templates/base.html
+++ b/APP/templates/base.html
@@ -23,6 +23,7 @@
         </div>
         <nav id="area-menu">
             <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('noticia') }}">Noticia</a>
             <a href="{{ url_for('sobre') }}">Sobre</a>
             <a href="{{ url_for('servicos') }}">Serviços</a>
             <a href="{{ url_for('portifolio') }}">Portfólio</a>
