implementação de banco

--- a/APP/templates/base.html
+++ b/APP/templates/base.html
@@ -22,12 +22,12 @@
             </div>
         </div>
         <nav id="area-menu">
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('noticia') }}">Noticia</a>
-            <a href="{{ url_for('sobre') }}">Sobre</a>
-            <a href="{{ url_for('servicos') }}">Serviços</a>
-            <a href="{{ url_for('portifolio') }}">Portfólio</a>
-            <a href="{{ url_for('fale_conosco') }}">Fale Conosco</a>
+            <a href="{{ url_for('main.index') }}">Home</a>
+            <a href="{{ url_for('main.noticia') }}">Noticia</a>
+            <a href="{{ url_for('main.sobre') }}">Sobre</a>
+            <a href="{{ url_for('main.servicos') }}">Serviços</a>
+            <a href="{{ url_for('main.portifolio') }}">Portfólio</a>
+            <a href="{{ url_for('main.fale_conosco') }}">Fale Conosco</a>
         </nav>
     </header>
 
