--- a/APP/templates/fale-conosco.html
+++ b/APP/templates/fale-conosco.html
@@ -11,7 +11,7 @@
         <h2>Fale Conosco</h2>
         <p>Entre em contato conosco para dúvidas, sugestões ou parcerias.</p>
 
-        <form action="{{ url_for('fale_conosco') }}" method="post">
+        <form action="{{ url_for('main.fale_conosco') }}" method="post">
             <div class="input-group">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
