--- a/APP/templates/Portifolio.html
+++ b/APP/templates/Portifolio.html
@@ -21,6 +21,11 @@
                     <p>Acompanhe as novidades, bastidores dos projetos, dicas de tecnologia e muito mais.</p>
                     <a href="https://www.instagram.com/cgtech_consultoria/" target="_blank">Acessar Instagram</a>
                 </div>
+                <div class="portfolio-card">
+                    <h3>Linkedin</h3>
+                    <p>Em constante evolução na área de TI, compartilho minha trajetória profissional no LinkedIn.</p>
+                    <a href="https://www.linkedin.com/in/carlos-amorim27/" target="_blank">Acessar Linkedin</a>
+                </div>
             </div>
         </section>
         
